services/audio-api/k8s/overlays/prod/patch-delete-ingress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audio-api
